hphp/hack/test/typecheck/function_pointer/class_const_dollar_dollar.php.exp
File "class_const_dollar_dollar.php", line 9, characters 22-30:
Function pointers `<>` can only be created with toplevel functions and explicitly named static methods. Use lambdas `(...) ==> {...}` for other cases. (Parsing[1002])
